<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Detalle.detalle_razas"
    android:background="@color/mainBackground">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="220dp">

            <!-- Fondo -->
            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/fondo_razas_detalle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="top"
                android:scaleType="fitXY"
                android:src="@drawable/mad_moon" />

        </LinearLayout>

        <!-- Titulo -->

            <!-- nombres -->
            <LinearLayout
                android:layout_margin="15dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/titulo_espanol_detalle_razas"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textColor="@color/PrimaryMain"
                    android:textSize="25sp" />

                <TextView
                    android:id="@+id/titulo_ingles_detalle_razas"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textColor="@color/SecondaryMain"
                    android:textSize="20sp" />

            </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Título -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="137dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="10dp"
                    android:layout_height="2dp"
                    android:background="@drawable/horizontal_line_left"/>
                <TextView
                    android:layout_marginStart="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:text="@string/biografia"
                    android:gravity="center"
                    android:textAlignment="center"
                    android:textSize="25sp"
                    android:textColor="@color/PrimaryMain" />

                <LinearLayout
                    android:layout_width="137dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="10dp"
                    android:layout_height="2dp"
                    android:background="@drawable/horizontal_line_right"/>

            </LinearLayout>

            <!-- Texto 1-->
            <TextView
                android:layout_marginBottom="10dp"
                android:id="@+id/det_razas_texto1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="20dp"
                android:text="@string/historia_razas"
                android:textSize="14sp"
                android:lineSpacingExtra="7dp"
                android:textColor="@color/textPrincipal"
                android:typeface="serif" />

            <!-- Titulo 1 -->
            <LinearLayout
                android:id="@+id/det_razas_layout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/det_razas_titulo1"
                    android:layout_marginStart="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:text="@string/localizaion"
                    android:gravity="center"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    android:textColor="@color/PrimaryMain" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginStart="10dp"
                    android:layout_height="2dp"
                    android:background="@drawable/horizontal_line_right"/>

            </LinearLayout>

            <!-- Texto 2-->
            <TextView
                android:layout_marginBottom="10dp"
                android:id="@+id/det_razas_texto2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="20dp"
                android:text="@string/historia_razas"
                android:textSize="14sp"
                android:lineSpacingExtra="7dp"
                android:textColor="@color/textPrincipal"
                android:typeface="serif" />

            <!-- Titulo 2 -->
            <LinearLayout
                android:id="@+id/det_razas_layout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/det_razas_titulo2"
                    android:layout_marginStart="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:text="@string/cultura"
                    android:gravity="center"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    android:textColor="@color/PrimaryMain" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginStart="10dp"
                    android:layout_height="2dp"
                    android:background="@drawable/horizontal_line_right"/>

            </LinearLayout>

            <!-- Texto 3-->
            <TextView
                android:layout_marginBottom="10dp"
                android:id="@+id/det_razas_texto3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="20dp"
                android:text="@string/historia_razas"
                android:textSize="14sp"
                android:lineSpacingExtra="7dp"
                android:textColor="@color/textPrincipal"
                android:typeface="serif" />

            <!-- Titulo 3 -->
            <LinearLayout
                android:id="@+id/det_razas_layout3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/det_razas_titulo3"
                    android:layout_marginStart="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:text="@string/marea"
                    android:gravity="center"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    android:textColor="@color/PrimaryMain" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginStart="10dp"
                    android:layout_height="2dp"
                    android:background="@drawable/horizontal_line_right"/>

            </LinearLayout>

            <!-- Texto 4-->
            <TextView
                android:layout_marginBottom="10dp"
                android:id="@+id/det_razas_texto4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="20dp"
                android:text="@string/historia_razas"
                android:textSize="14sp"
                android:lineSpacingExtra="7dp"
                android:textColor="@color/textPrincipal"
                android:typeface="serif" />

            <!-- Titulo 4 -->
            <LinearLayout
                android:id="@+id/det_razas_layout4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/det_razas_titulo4"
                    android:layout_marginStart="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:text="@string/magia"
                    android:gravity="center"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    android:textColor="@color/PrimaryMain" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginStart="10dp"
                    android:layout_height="2dp"
                    android:background="@drawable/horizontal_line_right"/>

            </LinearLayout>

            <!-- Texto 5-->
            <TextView
                android:layout_marginBottom="10dp"
                android:id="@+id/det_razas_texto5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="20dp"
                android:text="@string/historia_razas"
                android:textSize="14sp"
                android:lineSpacingExtra="7dp"
                android:textColor="@color/textPrincipal"
                android:typeface="serif" />

            <!-- Titulo 5 -->
            <LinearLayout
                android:id="@+id/det_razas_layout5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/det_razas_titulo5"
                    android:layout_marginStart="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:text="@string/invasion"
                    android:gravity="center"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    android:textColor="@color/PrimaryMain" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginStart="10dp"
                    android:layout_height="2dp"
                    android:background="@drawable/horizontal_line_right"/>

            </LinearLayout>

            <!-- Texto 6-->
            <TextView
                android:layout_marginBottom="10dp"
                android:id="@+id/det_razas_texto6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="20dp"
                android:text="@string/historia_razas"
                android:textSize="14sp"
                android:lineSpacingExtra="7dp"
                android:textColor="@color/textPrincipal"
                android:typeface="serif" />


        </LinearLayout>

        <!-- Banner prueba: ca-app-pub-3940256099942544/6300978111 -->
        <!-- Codigo Banner: ca-app-pub-8291876581767416/2153778017 -->
        <com.google.android.gms.ads.AdView
            android:id="@+id/adView_det_razas"
            xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:layout_marginBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            ads:adSize="BANNER"
            ads:adUnitId="ca-app-pub-8291876581767416/2153778017">
        </com.google.android.gms.ads.AdView>


        <!-- Título Relacionado -->
        <LinearLayout
            android:id="@+id/layout_rel_razas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="110dp"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:layout_height="2dp"
                android:background="@drawable/horizontal_line_left"/>
            <TextView
                android:layout_marginStart="10dp"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:text="@string/relacionados"
                android:gravity="center"
                android:textAlignment="center"
                android:textSize="25sp"
                android:textColor="@color/PrimaryMain" />

            <LinearLayout
                android:layout_width="137dp"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:layout_height="2dp"
                android:background="@drawable/horizontal_line_right"/>

        </LinearLayout>

        <!-- Heroes -->
        <LinearLayout
            android:id="@+id/layout_detrazas_rel_heroes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_marginStart="20dp"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:text="@string/heroes"
                android:gravity="center"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textColor="@color/PrimaryMain" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:layout_height="2dp"
                android:background="@drawable/horizontal_line_right"/>

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_razas_rel_heroe"
            android:paddingBottom="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <!-- Mundo -->
        <LinearLayout
            android:id="@+id/layout_detrazas_rel_mundo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_marginStart="20dp"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:text="@string/lugares"
                android:gravity="center"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textColor="@color/PrimaryMain" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:layout_height="2dp"
                android:background="@drawable/horizontal_line_right"/>

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_razas_rel_mundo"
            android:paddingBottom="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <!-- Razas -->
        <LinearLayout
            android:id="@+id/layout_detrazas_rel_razas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_marginStart="20dp"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:text="@string/razas"
                android:gravity="center"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textColor="@color/PrimaryMain" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:layout_height="2dp"
                android:background="@drawable/horizontal_line_right"/>

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_razas_rel_razas"
            android:paddingBottom="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </androidx.appcompat.widget.LinearLayoutCompat>


</ScrollView>